--- a/src/styles/Index.scss
+++ b/src/styles/Index.scss
@@ -1,95 +1,19 @@
 @import url(Common.scss);
 
-#root > div > div > header{position: fixed;
-  left: 0;top: 0;
-  width: 100%;height: 64px;
-  display: flex;
-  flex-direction: column;
-  background: #513736;
-  color: #fff;padding: 0 15px;
-  box-sizing: border-box;
-
-  .status_bar{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    height: 37.5%;
-  & > div {
-    flex: 1;
-    border: 1px solid red;
-    
-
-   * {
-    padding: 3px;
-  }    
-
-  }
-
-  & > .left_item {
-    text-align: left;
-  }
-  & > .center_item {
-    text-align: center;
-  }
-  & > .right_item {
-    text-align: right;
-  }
-    }
-
-  .title_bar{
-    display: flex;flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    height: 62.5%;
-    
-  & > * {
-    flex: 1;
-    font-size: 16px;
-    border: 1px solid red;  
-  }
-
-  & > h1 {
-    order: 2;
-    text-align: center;
-    
-     span {
-      color: #f8ea65;  
-    }  
-  }
-
-  & > .left_item {
-    order: 1;
-    text-align: left;
-    
-    a{
-      color: #fff;
-      opacity: 0.5  
-    }
-  }
-  
-  & > .right_item {
-    order: 3;
-    text-align: right;
-    font-size: 20px; 
-    
-    a {
-      color: #fff;
-    }  
-  }
-  }  
-}
-
 
  .index_main{
   height: 85.8%;
   padding-top: 30px;
+  background: url(../images/backgroundPage.png)no-repeat 0 0;
+  background-size: cover;
   .search_box{
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    height: 7.3%;min-height: 53px;
+    height: 7.3%;
+    min-height: 53px;
+    margin-top: 30px;
   
    .search_inner{
     display: flex;
@@ -98,7 +22,8 @@
     width: 88%;
     height: 50%;
     background-color: #f1f2f4;
-    border-radius: 5px; 
+    border-radius: 10px;
+    padding: 4px 0; 
     
      i{
       font-size: 16px;
@@ -111,7 +36,12 @@
       background: transparent;
       border: none;
       padding: 0 15px;
-      text-align: center;  
+      text-align: center;
+      &::placeholder{
+        opacity: 0.5;
+        font-weight: bold;
+        font-style: italic;
+      }  
     }
   }  
   }
@@ -124,11 +54,37 @@
     border: 1px solid #ebebeb;
     border-left: none;
     border-right: none;
-    color: #b6b5b1;}
+    color: #b6b5b1;
+  }
     
     & > ul {
       display: flex;
-      flex-direction: column;}
+      flex-direction: column;
+      
+
+    }
+
+    .update_ul{
+      display: flex;
+      flex-direction: row;
+      .update_friend{
+        a{
+          display: flex;
+          flex-direction: column;
+          .profile_img{
+            width: 40px; 
+            height: 40px;
+          }
+          .update_profile_name{
+            display: block;
+            font-size: 11px;
+            color: #ccc ;
+            font-weight: bold;
+            text-align: center;
+          }
+        }
+      }
+    }
 
     & > ul > li > a {
       display: flex;
@@ -140,8 +96,8 @@
         img{
         display: block;
         width: 40px;
-        height: 40px;
-        border-radius: 50%;
+        height: 40px ;
+        border-radius: 50% ;
         background-size: cover
         }
       }
@@ -158,14 +114,30 @@
         border-radius: 5px;
         background: #f0f0f0;
         font-size: 10px;
-        color: #8e9399;  
+        color: #8e9399;
+        box-shadow: 1px 1px 1px 1px gray;  
       }
     } 
     
+  .swiper_img{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+  }   
+  .update_profile_name{
+    display: block;
+    font-size: 11px;
+    color: #000 ;
+    font-weight: bold;
     
-     
+  }
         
   }
+}
+
+
+.active i {
+  color: black !important;
 }
 
 
