--- a/src/styles/Auth.scss
+++ b/src/styles/Auth.scss
@@ -22,25 +22,19 @@
          rgba(0, 0, 0, 0.12) 0px -12px 30px,
           rgba(0, 0, 0, 0.12) 0px 4px 6px,
            rgba(0, 0, 0, 0.17) 0px 12px 13px,
-            rgba(0, 0, 0, 0.09) 0px -3px 5px;  
+            rgba(0, 0, 0, 0.09) 0px -3px 5px;
         h3{
           font-size: 30px;
           font-weight: bold;
           text-shadow: 2px 6px 2px gray;
           color: #eeeeee;
           position: absolute;
-          top: 160px;left: 50%;
-          animation: slidein 3s infinite;
+          top: 160px;left: 30%;
+         
         }
-        @keyframes slidein {
-          from {
-            transform: translateX(-130%);
-          }
-          to {
-            transform: translateX(20%);
-          }
-        } 
       }
+
+
     form {
       position: absolute;
       display: block;
@@ -55,6 +49,13 @@
             height: 30px;
             border: none;
             text-align: center;
+            opacity: 0.7;
+            font-family: 'Courier New', Courier, monospace;
+            font-size: 14px;
+            cursor: pointer;
+            &:hover{
+              opacity: 1;
+            }
              
         }
         .auth_input_account{
