--- a/src/styles/More.scss
+++ b/src/styles/More.scss
@@ -11,7 +11,12 @@
     
     & > .profile_img {
       width: 50px;
-      height: 50px;  
+      height: 50px;
+      img{
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+      }  
     }
     & > .profile_info {
       flex: auto;
@@ -26,7 +31,7 @@
         color: #8e9399;  
       }  
     }
-    & > .chat_img a {
+    & > .chat_img i {
       font-size: 30px;
       margin-right: 15px;
       color: #513736;  
