--- a/src/styles/Profiles.scss
+++ b/src/styles/Profiles.scss
@@ -1,14 +1,129 @@
 @import url(Common.scss);
 
 .profile_main{
-  height: 65vh;
+  height: 100vh;
 
-  & > .background {
-    height: 65vh;
+  & > .profiles_background {
+    height: 100vh;
       img{
-      height: 65vh;
+      height: 100vh;
       width: 100%;
+      filter: grayscale(50%);
       }
     
-} 
+}
+.profile_sub{
+  display: flex;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  position: absolute;
+  top: 70%; 
+  .profile_cont{
+    .profile_delete{
+      width: 24px;
+      height: 24px;
+      background-color: #fff;
+      border-radius: 50%;
+      position: absolute;
+      top: 18px;
+      right: 39%;
+      z-index: 1;
+      i {
+        font-size: 14px;
+        color: #000;
+        font-weight: bold;
+        position: absolute;
+        left: 5px;
+        top: 3px;
+
+      }
+    }
+    .back_form{
+      max-width: 320px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 30px 30px 30px 0;
+      color: rgba(0, 0, 0, 0.8);
+      box-shadow: 8px 8px 2px 1px rgba(0, 0, 255, .2);
+      position: absolute;
+      top: -100px;
+      right: 20px;
+      .input__label{
+        
+        span{
+          font-size: 13px;
+          font-weight: bold;
+          color: #040404;
+
+
+        }
+      }
+      .back_input{
+        margin: 0;
+        padding: 0;
+        width: 60px;
+        font-size: 11px;
+        font-weight: bold;
+        background-color: azure;
+
+        &:hover{
+          background-color: bisque;
+        }
+      }
+    }
+    .profiles_name{
+      margin-top: 20px;
+      font-size: 14px;
+      font-weight: bold;
+      color: #040404;
+      border-radius: 5px;
+      width: 148px;
+      height: 24px;
+      text-align: center;
+      background-color: #fff;
+      padding: 0 5px;
+      
+    }
+    .profiles_form{
+      max-width: 320px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 30px 30px 0 30px;
+      color: rgba(0, 0, 0, 0.8);
+      box-shadow: -8px 8px 1px 1px rgba(0, 0, 255, .2);
+      position: absolute;
+      top: -100px;
+      left: 20px;
+      .InsertInput__label{
+        span{
+          font-size: 13px;
+          font-weight: bold;
+          color: #040404;
+        }  
+      }
+      .profiles_input{
+        margin: 0;
+        padding: 0;
+        width: 60px;
+        font-size: 11px;
+        font-weight: bold;
+        background-color: azure;
+        &:hover{
+          background-color: bisque;
+        }  
+      }      
+    }
+  }  
+
+}
+
 }
