--- a/src/styles/Auth.scss
+++ b/src/styles/Auth.scss
@@ -11,7 +11,7 @@
     margin: 0 auto;
     background-size: cover;
       .auth_background{
-        background: url(../images/Bubble.png)no-repeat 0 0;
+        
         object-fit: cover;
         width: 360px;
         height: 360px;
@@ -20,16 +20,17 @@
         border-radius: 10px;
         box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
          rgba(0, 0, 0, 0.12) 0px -12px 30px,
-          rgba(0, 0, 0, 0.12) 0px 4px 6px,
-           rgba(0, 0, 0, 0.17) 0px 12px 13px,
-            rgba(0, 0, 0, 0.09) 0px -3px 5px;
+         rgba(0, 0, 0, 0.12) 0px 4px 6px,
+         rgba(0, 0, 0, 0.17) 0px 12px 13px,
+         rgba(0, 0, 0, 0.09) 0px -3px 5px;
+          opacity: 0.5;
         h3{
           font-size: 30px;
           font-weight: bold;
           text-shadow: 2px 6px 2px gray;
-          color: #eeeeee;
+          color: #fff;
           position: absolute;
-          top: 160px;left: 30%;
+          top: 160px;left: 150px;
          
         }
       }
@@ -63,8 +64,17 @@
           background-color: transparent;
           color: #bbb;
           font-weight: bold;
-          font-size: 15px;
+          font-size: 20px;
           cursor: pointer;
+        }
+        .authError{
+          color: tomato;text-align: center;font-weight: bold;font-size: 12px;
+          position: absolute;
+          background: none;
+          width: 230px;
+          &:hover{
+            background-color: transparent;
+          }
         }
     }
     span{
@@ -77,7 +87,7 @@
       width: 150px;
       height: 20px;     
       text-align: center;
-      background-color: #fff;
+      font-family: 'Courier New', Courier, monospace;
       cursor: pointer;
       &:hover{
         background-color: #ccc;
@@ -85,10 +95,11 @@
     }
 
     p{
-      font-size: 15px;
+      margin-top: 20px;
+      font-size: 17px;
       font-weight: bold;
       margin-bottom: 10px;
-
+      font-family: 'Courier New', Courier, monospace;
     }
     div {
       display: flex;
