--- a/src/styles/Chatting.scss
+++ b/src/styles/Chatting.scss
@@ -39,6 +39,9 @@
     display: flex;
     flex-direction: row;
     justify-content: right;
+    a{
+      align-self: center;
+    }
     
     i{
       font-size: 20px;
@@ -208,7 +211,7 @@
       .chatting_attach{
       position: absolute;
       top: -100px;left: 20px;
-      background-color: #a1c0d5; 
+      
       border-radius: 20px;
       
       &>img{
@@ -220,7 +223,14 @@
       .chatting_button{
         border: none;
         border-radius: 20px;
-        
+        font-family: Arial, Helvetica, sans-serif;
+        background: transparent;
+        font-weight: bold;
+        position: absolute;
+        bottom: 10px;
+        &:hover{
+          color: #fff;
+        }
       }
       }  
     }
