--- a/src/styles/Kakao.scss
+++ b/src/styles/Kakao.scss
@@ -40,23 +40,22 @@
       background-color: #04aaff;
     }
     }
-    
+    .chatting_cancel{
+      position: absolute;
+      right: 18px;
+      top: 120px;
+      width: 258px;
+      padding: 7px 20px;
+      text-align: center;
+      background-color: red;
+      border-radius: 20px;
+      color: #fff;
+      font-weight: bold;
+      border: none;
+      
+    }
   }
-  .chatting_cancel{
-    position: absolute;
-    right: 29px;top: 63%;
-    width: 100%;
-    padding: 7px 20px;
-    text-align: center;
-    background-color: red;
-    border-radius: 20px;
-    color: #fff;
-    font-weight: bold;
-    border: none;
-    
-    
 
-  }
   .chat_my{
     background: #ffe73a; 
     font-size: 15px;
