--- a/src/styles/Auth.scss
+++ b/src/styles/Auth.scss
@@ -30,11 +30,10 @@
           text-shadow: 2px 6px 2px gray;
           color: #fff;
           position: absolute;
-          top: 160px;left: 150px;
+          left: 30%;top: 30%;
          
         }
       }
-
 
     form {
       position: absolute;
@@ -60,7 +59,7 @@
              
         }
         .auth_input_account{
-          margin-top: 100px;
+          margin-top: 80px;
           background-color: transparent;
           color: #bbb;
           font-weight: bold;
