--- a/src/styles/Tab.scss
+++ b/src/styles/Tab.scss
@@ -7,6 +7,8 @@
   min-height: 54px;
   border-top: 1px solid #c1c1c1;
   background-color: #f7f7f7;
+  background: linear-gradient(#ccc 10%, 70%, white 90%);
+
 
   & > ul {
     display: flex;
@@ -16,7 +18,9 @@
             flex: 1;
             text-align: center;
             transition: transform 500ms linear 0s;
-
+            a {
+              font-family: 'Times New Roman', Times, serif;
+            }
               
                
                   i {
@@ -31,6 +35,7 @@
               &:hover {
                 transform: scale(1.1);
                 color: #000;
+                font-weight: bold;
               }  
           }
       }
