--- a/src/styles/Profiles.scss
+++ b/src/styles/Profiles.scss
@@ -70,6 +70,7 @@
           font-size: 13px;
           font-weight: bold;
           color: #040404;
+          cursor: pointer;
 
 
         }
@@ -114,11 +115,13 @@
       position: absolute;
       top: -100px;
       left: 20px;
+      
       .InsertInput__label{
         span{
           font-size: 13px;
           font-weight: bold;
           color: #040404;
+          cursor: pointer;
         }  
       }
       .profiles_input{
@@ -153,13 +156,13 @@
       position: absolute;
       top: -20px;
       left: 160px;
-      color: #fff;
+      color: #000;
       transition: transform 300ms linear 0s;
       transition: color 1000ms ease-in-out 0s;
       cursor: pointer;
       &:hover{
         transform: scale(1.2);
-        color: #000; 
+        color: #fff; 
       }
     }
     .toggle_btn{
@@ -170,11 +173,11 @@
         border: none;
         background-color: transparent;
         font-size: 17px;
-        color: #fff;
+        color: #000;
         transition: color 1000ms ease-in-out 0s; 
         &:hover{
           transform: scale(1.2);
-          color: #000; 
+          color: #fff; 
         }
       }
 
