--- a/src/styles/More.scss
+++ b/src/styles/More.scss
@@ -34,7 +34,8 @@
     & > .chat_img i {
       font-size: 30px;
       margin-right: 15px;
-      color: #513736;  
+      color: #513736;
+      cursor: pointer;  
     }  
   }
   .user_menu {
